--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,8 @@ github:
 
 # Build settings
 #theme: minima
-#theme: cayman
-remote_theme: pages-themes/cayman@v0.2.0
+theme: cayman
+#remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
   - jekyll-feed
