--- a/_config.yml
+++ b/_config.yml
@@ -36,7 +36,7 @@ github:
 # Build settings
 #theme: minima
 #theme: cayman
-theme: pages-themes/cayman
+theme: pages-themes/cayman@v0.2.0
 #remote_theme: pages-themes/cayman@v0.2.0
 plugins:
   - jekyll-remote-theme # add this line to the plugins list if you already have one
